Dev fix: BS4/5 buttons when working with nested groups weren't aligning correctly

--- a/css/buttons.bootstrap5.scss
+++ b/css/buttons.bootstrap5.scss
@@ -12,8 +12,7 @@ div.dt-button-collection {
 	border-radius: 4px;
 	box-shadow: 0 6px 12px rgba(0,0,0,.175);
 	padding: 0.5rem 0;
-	max-width: none;
-	min-width: 200px;
+	width: 200px;
 
 	div.dropdown-menu {
 		position: relative;
@@ -34,6 +33,10 @@ div.dt-button-collection {
 		&:after {
 			display: none;
 		}
+	}
+
+	.btn-group {
+		flex: 1 1 auto;
 	}
 
 	.dt-button {
